--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Kangle's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://pixijs.download/release/pixi.js"></script>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my GitHub Pages portfolio site!</p>
+    <header>
+
+        <!-- greeting.. image.. intro    -->
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <main>
+        
+    <!-- <p>This is my GitHub Pages portfolio site!</p> -->
+        <!-- projects -->
+         <!-- work exp -->
+          <!-- education -->
+    </main>
+    <footer></footer>
 </body>
+<script type="module">
+    // Create the application helper and add its render target to the page
+    const app = new PIXI.Application();
+      await app.init({ width: 640, height: 360 })
+      document.body.appendChild(app.canvas);
+
+      // Create the sprite and add it to the stage
+      await PIXI.Assets.load('sample.png');
+      let sprite = PIXI.Sprite.from('sample.png');
+      app.stage.addChild(sprite);
+
+      // Add a ticker callback to move the sprite back and forth
+      let elapsed = 0.0;
+      app.ticker.add((ticker) => {
+        elapsed += ticker.deltaTime;
+        sprite.x = 100.0 + Math.cos(elapsed/50.0) * 100.0;
+      });
+  </script>
 </html>
