--- a/index.html
+++ b/index.html
@@ -1,35 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>PixiJS Custom Cursor</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Kangle's Portfolio</title>
+  <meta name="description" content="Open for jobs, please hire me.">
+  <meta property="og:image" content="alarm.gif" />
+  <meta name="keywords" content="Kangle, Kangle Jiang">
+  <meta name="author" content="Kangle Jiang">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-    <header>
-      <h1>Welcome to Kangle's Portfolio
-        <p>I'm a software engineer with a passion for building web applications and mobile apps.</p>
-      </h1>
-      
-    </header>
-    <main>
-      <h2>Projects</h2>
-      <p>Here are some of my projects:</p>
-      <ul>
-        <li><a href="https://github.com/memenpu/c--aws-api-applications">aws-api-applications</a></li>
-        <li><a href="https://github.com/kanglej/kanglej.github.io">My Portfolio</a></li>
-        <li><a href="https://github.com/kanglej/kanglej.github.io">My Portfolio</a></li>
-      </ul>
-      <button >Click me</button>
-      <a href="https://github.com/kanglej/kanglej.github.io" >My Portfolio</a>
-    </main>
-    <footer>2025 &copy; Kangle J</footer>
+
+  <header>
+    <h1>Welcome!
+    </h1>
+    <img src="alarm.gif" alt="Irasshaimase
+      いらっしゃいませ" style="width:100px;height:100px;">
+  </header>
+  <main class="container">
+    <h3 id="kangle-jiang">KANGLE JIANG</h3>
+    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a></p>
+    <p>Phone | <a href="tel:+16479498370">+1 647 949 8370</a></p>
+    <h4 id="about">ABOUT ME</h4>
+    <p>Results-driven Professional Programmer with 3+ years of experience in software development. Experienced with UI,
+      Restful API development, unit testing, automation testing, programming, debugging, and database management.
+      Seeking new opportunities in a dynamic company to leverage my expertise and contribute to innovative projects.</p>
+    <h4 id="skills">SKILLS</h4>
+    <ul>
+      <li>Proficient in various design frameworks: Bootstrap, Material Design, Lightning Design, Bulma.</li>
+      <li>Skilled in web app development using: Angular, React, NodeJs.</li>
+      <li>Fullstack application development: ASP.NET Core, Java Spring Boot, Flask, Express.</li>
+      <li>Version control expertise: Azure DevOps, Bitbucket, GitHub.</li>
+      <li>Database experience: MySQL, Oracle, PostgreSQL, Firebase, AWS DynamoDB, Cosmos.</li>
+      <li>Programming languages: JavaScript, HTML, CSS, TypeScript, Python, Dart, Java, C#.</li>
+      <li>Familiarity with Linux servers: Samba, NFS, NextCloud, Remote Desktop, OpenSSH</li>
+    </ul>
+    <h4 id="education">EDUCATION</h4>
+    <p>Software Engineering Technician Diploma
+      Centennial College, Toronto, Ontario, Canada
+      2018 – 2021</p>
+    <p>RELEVANT COURSES COMPLETED</p>
+    <ul>
+      <li>Programming 2</li>
+      <li>Programming 3</li>
+      <li>Java Programming</li>
+      <li>Web Application Development</li>
+      <li>Database Concept</li>
+      <li>Advanced Database</li>
+      <li>Software Development Methodology</li>
+      <li>Business Entrepreneurship</li>
+      <li>Business English</li>
+      <li>ASP.NET Core Application</li>
+      <li>Software Project</li>
+    </ul>
+    <h4 id="projects">PROJECTS</h4>
+    <p>ABC CINEMA (Jan 2019 – Apr 2019)</p>
+    <ul>
+      <li>Simple movie feed web application based on Movie DB API</li>
+      <li>Technologies: HTML, CSS3, JavaScript, Restful API, Session Storage</li>
+      <li>Link: <a
+          href="https://replit.com/@FreeSadness/Assignment5and6#index.html">https://replit.com/@FreeSadness/Assignment5and6#index.html</a>
+      </li>
+    </ul>
+    <p>Recipe (Sep 2019 – Dec 2019)</p>
+    <ul>
+      <li>An ASP.NET Core Recipe web application</li>
+      <li>Technologies: C#, CSHTML, Bootstrap, ASP.NET Core, Entity Framework, Microsoft SQL</li>
+      <li>Azure DevOps Repo Link: <a
+          href="https://dev.azure.com/saguoran/_git/MyRecipe">https://dev.azure.com/saguoran/_git/MyRecipe</a></li>
+    </ul>
+    <p>Phone API (Nov 2019 – Dec 2019)</p>
+    <ul>
+      <li>A Restful API app for GRUD Phones </li>
+      <li>Technologies: C#, ASP.NET Core, Entity Framework, Microsoft SQL, Swagger</li>
+      <li>Azure DevOps Repo Link: <a
+          href="https://github.com/memenpu/PhoneAsp.netCoreApi">https://github.com/memenpu/PhoneAsp.netCoreApi</a></li>
+    </ul>
+    <p>AWS Samples (Jan 2021 – Apr 2021)</p>
+    <ul>
+      <li>AWS Lambda functions for image label generator with AWS Rekognition and thumbnail image generator on S3
+        PutObject</li>
+      <li>Technologies: AWS CLI, S3 Buckets, CloudWatch Log, Lambda Function, C#, Rekognition, DynamoDB</li>
+      <li>GitHub Link: <a
+          href="https://github.com/memenpu/c--aws-api-applications.git">https://github.com/memenpu/c--aws-api-applications.git</a>
+      </li>
+    </ul>
+    <p>Adaptive Quizlet (Sep 2021 – Dec 2021)</p>
+    <ul>
+      <li>A simple quiz web application using Flask Framework.</li>
+      <li>Technologies: Bootstrap CSS, Python Flask, Flask-SQLAlchemy, BeautifulSoup4, SQLite3</li>
+      <li>Github Link: <a
+          href="https://github.com/COMP231-Winter2021-Section002-Team1/adaptive_quizlet.api">https://github.com/COMP231-Winter2021-Section002-Team1/adaptive_quizlet.api</a>
+      </li>
+    </ul>
+    <p>One General Construction (May 2023 – Current)</p>
+    <ul>
+      <li>An promotion website for a company</li>
+      <li>Technologies: HTML, CSS, Solidjs, Firebase, Github CI</li>
+      <li>Link: <a href="https://ogc-web-30135.web.app">https://ogc-web-30135.web.app</a></li>
+    </ul>
+    <h4 id="work-history">WORK HISTORY</h4>
+    <p>IT Support Assistant, Treasury Board Secretariat, March 2022 – October 2024</p>
+    <ul>
+      <li>Assigned to the ONTrack team, responsible for developing an application for Ministries Meetings Schedules
+        planning.</li>
+      <li>Collaborated with team lead to analyze and validate application performance.</li>
+      <li>Worked closely with peers to identify issues and provide valuable suggestions for improvement.</li>
+      <li>Developed UI elements and functions for the web application using Angular.</li>
+      <li>Played a key role in ensuring successful releases during each sprint.</li>
+      <li>
+        <h5 id="work-project-ontrack">Work Project ONTrack</h5>
+      </li>
+      <li>This suite of applications is specifically designed to conduct internal Government of Ontario business.</li>
+      <li>Technologies: Angular, .Net, Microsoft Azure, Microsoft Authentication Library (MSAL), Cosmos DB</li>
+    </ul>
+
+  </main>
+  <footer>2025 &copy; K.J.</footer>
   <div class="cursor_circle">
   </div>
-  <div class="cursor_dot">    
-</div>
-    
-    <script type="module" src="script.js"></script>
+  <div class="cursor_dot">
+  </div>
+  <script type="module" src="script.js"></script>
 </body>
+
 </html>
