--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Kangle's Portfolio</title>
-  <meta name="description" content="Open for jobs, please hire me.">
+  <meta name="description" content="Open for jobs, please hire me at +1 6479498370">
   <meta property="og:image" content="alarm.gif" />
-  <meta name="keywords" content="Kangle, Kangle Jiang">
+  <meta property="og:title" content="Kangle's Portfolio" />
+  <meta property="og:type" content="Portfolio" />
+  <meta property="og:url" content="https://memenpu.github.io />
+  <meta name=" keywords" content="Kangle, Kangle Jiang">
   <meta name="author" content="Kangle Jiang">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
