--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="alarm.gif" type="image/gif" />
   <title>Kangle's Portfolio -- hire me at +1 6479498370</title>
   <meta name="description" content="Open for jobs, please hire me at +1 6479498370">
-  <meta property="og:image" content="alarm.gif">
+  <meta property="og:image" content="alarm.gif">  
+  <meta property="og:logo" content="image/gif" />
   <meta property="og:title" content="Kangle's Portfolio">
   <meta property="og:type" content="Portfolio">
   <meta property="og:url" content="https://memenpu.github.io>
