--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </header>
   <main class="container">
     <h3 id="kangle-jiang">KANGLE JIANG</h3>
-    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a></p>
-    <p>Phone | <a href="tel:+16479498370">+1 647 949 8370</a></p>
+    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a>  | <a href="tel:+16479498370">+1 647 949 8370</a></p>
+    
     <h4 id="about">ABOUT ME</h4>
     <p>Results-driven Professional Programmer with 3+ years of experience in software development. Experienced with UI,
       Restful API development, unit testing, automation testing, programming, debugging, and database management.
