fixed meta tags

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" href="alarm.gif" type="image/gif" />
   <title>Kangle's Portfolio -- call me at +1 6479498370</title>
   <meta name="description" content="Open for jobs, please call me at +1 6479498370">
-  <meta property="og:image" content="alarm.gif">  
-  <meta property="og:logo" content="image/gif" />
-  <meta property="og:title" content="Kangle's Portfolio">
-  <meta property="og:type" content="Portfolio">
-  <meta property="og:url" content="https://memenpu.github.io>
   <meta name="keywords" content="Kangle, Kangle Jiang">
+  <meta property="og:image" content="alarm.gif" /> 
+  <meta property="og:logo" content="image/gif" >
+  <meta property="og:title" content="Kangle's Portfolio">
+  <meta property="og:type" content="Portfolio" >
+  <meta property="og:url" content="https://memenpu.github.io" >
   <meta name="author" content="Kangle Jiang">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" type="text/css">
@@ -44,9 +44,11 @@
       <li>Familiarity with Linux servers: Samba, NFS, NextCloud, Remote Desktop, OpenSSH</li>
     </ul>
     <h4 id="education">EDUCATION</h4>
-    <p>Software Engineering Technician Diploma
-      Centennial College, Toronto, Ontario, Canada
-      2018 – 2021</p>
+    <p><span style="font-weight: bold;">Software Engineering Technician Diploma </span>
+      </p>
+      <p>
+        Centennial College, Toronto, Ontario, Canada, 2018 – 2021
+      </p>
     <p>RELEVANT COURSES COMPLETED</p>
     <ul>
       <li>Programming 2</li>
