--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <li>Familiarity with Linux servers: Samba, NFS, NextCloud, Remote Desktop, OpenSSH</li>
     </ul>
     <h4 id="education">EDUCATION</h4>
-    <p><span style="font-weight: bold;">Software Engineering Technician Diploma </span>
+    <p>
+      Centennial College, Toronto, Ontario, Canada (Sep 2018 – Jan 2021)
       </p>
-      <p>
-        Centennial College, Toronto, Ontario, Canada, 2018 – 2021
+      <p>Software Engineering Technician Diploma 
       </p>
     <p>RELEVANT COURSES COMPLETED</p>
     <ul>
@@ -110,7 +110,7 @@
       <li>Link: <a href="https://ogc-web-30135.web.app">https://ogc-web-30135.web.app</a></li>
     </ul>
     <h4 id="work-history">WORK HISTORY</h4>
-    <p>IT Support Assistant, Treasury Board Secretariat, March 2022 – October 2024</p>
+    <p>IT Support Assistant, Treasury Board Secretariat, (Mar 2022 – Octo 2024)</p>
     <ul>
       <li>Assigned to the ONTrack team, responsible for developing an application for Ministries Meetings Schedules
         planning.</li>
