--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="alarm.gif" /> 
   <meta property="og:logo" content="image/gif" >
   <meta property="og:title" content="Kangle's Portfolio">
-  <meta property="og:type" content="Portfolio" >
+  <meta property="og:type" content="profile" >
   <meta property="og:url" content="https://memenpu.github.io" >
   <meta name="author" content="Kangle Jiang">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
