--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       いらっしゃいませ" style="width:100px;height:100px;">
   </header>
   <main class="container">
-    <h3 id="kangle-jiang">KANGLE JIANG</h3>
-    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a>  | <a href="tel:+16479498370">+1 647 949 8370</a></p>
+    <h3 id="kangle-jiang">Kangle Jiang</h3>
+    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a>  | <a href="tel:+16479498370">+1 647 949 8370</a> | <a href="https://memenpu.github.io" target="_blank">memenpu.github.io</a></p>
     
-    <h4 id="about">ABOUT ME</h4>
+    <h4 id="about">About Me</h4>
     <p>Results-driven Professional Programmer with 3+ years of experience in software development. Experienced with UI,
       Restful API development, unit testing, automation testing, programming, debugging, and database management.
       Seeking new opportunities in a dynamic company to leverage my expertise and contribute to innovative projects.</p>
-    <h4 id="skills">SKILLS</h4>
+    <h4 id="skills">Skills</h4>
     <ul>
       <li>Proficient in various design frameworks: Bootstrap, Material Design, Lightning Design, Bulma.</li>
       <li>Skilled in web app development using: Angular, React, NodeJs.</li>
@@ -43,13 +43,13 @@
       <li>Programming languages: JavaScript, HTML, CSS, TypeScript, Python, Dart, Java, C#.</li>
       <li>Familiarity with Linux servers: Samba, NFS, NextCloud, Remote Desktop, OpenSSH</li>
     </ul>
-    <h4 id="education">EDUCATION</h4>
+    <h4 id="education">Education</h4>
     <p>
       Centennial College, Toronto, Ontario, Canada (Sep 2018 – Jan 2021)
       </p>
       <p>Software Engineering Technician Diploma 
       </p>
-    <p>RELEVANT COURSES COMPLETED</p>
+    <p>Relevant Courses Completed</p>
     <ul>
       <li>Programming 2</li>
       <li>Programming 3</li>
@@ -63,7 +63,7 @@
       <li>ASP.NET Core Application</li>
       <li>Software Project</li>
     </ul>
-    <h4 id="projects">PROJECTS</h4>
+    <h4 id="projects">Projects</h4>
     <p>ABC CINEMA (Jan 2019 – Apr 2019)</p>
     <ul>
       <li>Simple movie feed web application based on Movie DB API</li>
@@ -105,12 +105,12 @@
     </ul>
     <p>One General Construction (May 2023 – Current)</p>
     <ul>
-      <li>An promotion website for a company</li>
+      <li>A promotion website</li>
       <li>Technologies: HTML, CSS, Solidjs, Firebase, Github CI</li>
       <li>Link: <a href="https://ogc-web-30135.web.app">https://ogc-web-30135.web.app</a></li>
     </ul>
-    <h4 id="work-history">WORK HISTORY</h4>
-    <p>IT Support Assistant, Treasury Board Secretariat, (Mar 2022 – Octo 2024)</p>
+    <h4 id="work-history">Work History</h4>
+    <p>IT Support Assistant, Treasury Board Secretariat, (Mar 2022 – Oct 2024)</p>
     <ul>
       <li>Assigned to the ONTrack team, responsible for developing an application for Ministries Meetings Schedules
         planning.</li>
@@ -118,15 +118,16 @@
       <li>Worked closely with peers to identify issues and provide valuable suggestions for improvement.</li>
       <li>Developed UI elements and functions for the web application using Angular.</li>
       <li>Played a key role in ensuring successful releases during each sprint.</li>
-      <li>
-        <h5 id="work-project-ontrack">Work Project ONTrack</h5>
-      </li>
+    </ul>
+    <p id="work-project-ontrack">Work Project ONTrack</p>
+    <ul>
+
       <li>This suite of applications is specifically designed to conduct internal Government of Ontario business.</li>
       <li>Technologies: Angular, .Net, Microsoft Azure, Microsoft Authentication Library (MSAL), Cosmos DB</li>
     </ul>
 
   </main>
-  <footer>2025 &copy; K.J.</footer>
+  <footer>2025 &copy; KJ</footer>
   <div class="cursor_circle">
   </div>
   <div class="cursor_dot">
