added target="_blank" on all a tags

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <ul>
       <li>Simple movie feed web application based on Movie DB API</li>
       <li>Technologies: HTML, CSS3, JavaScript, Restful API, Session Storage</li>
-      <li>Link: <a
+      <li>Link: <a target="_blank"
           href="https://replit.com/@FreeSadness/Assignment5and6#index.html">https://replit.com/@FreeSadness/Assignment5and6#index.html</a>
       </li>
     </ul>
@@ -76,14 +76,14 @@
     <ul>
       <li>An ASP.NET Core Recipe web application</li>
       <li>Technologies: C#, CSHTML, Bootstrap, ASP.NET Core, Entity Framework, Microsoft SQL</li>
-      <li>Azure DevOps Repo Link: <a
+      <li>Azure DevOps Repo Link: <a target="_blank"
           href="https://dev.azure.com/saguoran/_git/MyRecipe">https://dev.azure.com/saguoran/_git/MyRecipe</a></li>
     </ul>
     <p>Phone API (Nov 2019 – Dec 2019)</p>
     <ul>
       <li>A Restful API app for GRUD Phones </li>
       <li>Technologies: C#, ASP.NET Core, Entity Framework, Microsoft SQL, Swagger</li>
-      <li>Azure DevOps Repo Link: <a
+      <li>Azure DevOps Repo Link: <a target="_blank"
           href="https://github.com/memenpu/PhoneAsp.netCoreApi">https://github.com/memenpu/PhoneAsp.netCoreApi</a></li>
     </ul>
     <p>AWS Samples (Jan 2021 – Apr 2021)</p>
@@ -91,7 +91,7 @@
       <li>AWS Lambda functions for image label generator with AWS Rekognition and thumbnail image generator on S3
         PutObject</li>
       <li>Technologies: AWS CLI, S3 Buckets, CloudWatch Log, Lambda Function, C#, Rekognition, DynamoDB</li>
-      <li>GitHub Link: <a
+      <li>GitHub Link: <a target="_blank"
           href="https://github.com/memenpu/c--aws-api-applications.git">https://github.com/memenpu/c--aws-api-applications.git</a>
       </li>
     </ul>
@@ -99,7 +99,7 @@
     <ul>
       <li>A simple quiz web application using Flask Framework.</li>
       <li>Technologies: Bootstrap CSS, Python Flask, Flask-SQLAlchemy, BeautifulSoup4, SQLite3</li>
-      <li>Github Link: <a
+      <li>Github Link: <a target="_blank"
           href="https://github.com/COMP231-Winter2021-Section002-Team1/adaptive_quizlet.api">https://github.com/COMP231-Winter2021-Section002-Team1/adaptive_quizlet.api</a>
       </li>
     </ul>
@@ -107,7 +107,7 @@
     <ul>
       <li>A promotion website</li>
       <li>Technologies: HTML, CSS, Solidjs, Firebase, Github CI</li>
-      <li>Link: <a href="https://ogc-web-30135.web.app">https://ogc-web-30135.web.app</a></li>
+      <li>Link: <a target="_blank" href="https://ogc-web-30135.web.app">https://ogc-web-30135.web.app</a></li>
     </ul>
     <h4 id="work-history">Work History</h4>
     <p>IT Support Assistant, Treasury Board Secretariat, (Mar 2022 – Oct 2024)</p>
