--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
   <main class="container">
     <h3 id="kangle-jiang">Kangle Jiang</h3>
-    <p>Toronto | <a href="kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a>  | <a href="tel:+16479498370">+1 647 949 8370</a> | <a href="https://memenpu.github.io" target="_blank">memenpu.github.io</a></p>
+    <p><a href="https://www.linkedin.com/in/kangle-jiang-66a332196/" target="_blank">LinkedIn</a> | <a href="mailto:kjiang7@my.centennialcollege.ca">kjiang7@my.centennialcollege.ca</a>  | <a href="tel:+16479498370">+1 647 949 8370</a> | <a href="https://memenpu.github.io" target="_blank">memenpu.github.io</a></p>
     
     <h4 id="about">About Me</h4>
     <p>Results-driven Professional Programmer with 3+ years of experience in software development. Experienced with UI,
